test/spec_vectors/conversions/fail/module_12.wat
(module (func (result i64) (i64.trunc_f64_u (i32.const 0))))